# rasterview

./: .depend  .gitattributes  .gitignore  .lgtm.yml  CHANGES.md  Makefile.in  NOTICE  README  README.md  RasterDisplay.cxx  RasterDisplay.h  RasterView.cxx  RasterView.h  configure  configure.ac  configure.in  dmgbuild.py  error.c  eyedropper.xbm  icons.rc  left.xbm  list.xbm  main.cxx  makesrcdist  move.xbm  packages.config  pwg-raster.desktop  raster-error.c  raster-private.h  raster-stream.c  raster.c  raster.h  rasterview-installer.aip  rasterview-installer.aiproj  rasterview.desktop  rasterview.list.in  rasterview.opacity  rasterview.sln  rasterview.vcxproj  rasterview.xml  (+7 more)
.github/: codeql.yml
.github/workflows/: codeql.yml
RasterView.app/Contents/: Info.plist  PkgInfo
RasterView.app/Contents/Resources/: rasterview.icns
snap/: snapcraft.yaml
test/: maketestfiles.sh  rasterview.ppd
